--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<title>Responsive Horizontal Sliding Menu</title>
 </head>
 	<body>
+
+		<!-- http://www.millbrookwine.com -->
+
 	<section>
 		<!-- Responsive Horizontal Sliding Menu -->
 		<div class="menu">
@@ -81,20 +84,52 @@
 		</div>
 		<div class="container ">
 		  <div class="row">
-		    <div class="col-">
-		      One of three columns Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		    <div class="col- h3-wrap">
+			    <h3>Visiting the Winery</h3>
 		    </div>
 		  </div>
+		  <div class="row">
+		  	<div class="col-6">
+		  		<div class="img-wrap">
+		  		</div>	
+		  	</div>
+		  	<div class="col-6">
+		  		<div class="wrap-tx">
+			  		<span> An Experience to Savor</span>
+			  		<i>Come See Our Beautiful Lorem Ipsum</i>
+			  		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			  		consequat velit esse
+			  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			  		<button type="button" class="btn btn-light">READ MORE</button>
+		  		</div>
+		  	</div>
+		  </div>
+		</div>
+	</section>
+
+	<section>
+		<div class="container t-l">
+			<div class="row">
+				<div class="col-6 t-l-1">
+					<div class="overlay">
+						<i>Group Tours</i>					
+					</div>
+				</div>
+				<div class="col-6 t-l-2">
+					<div class="overlay">
+						<i>Group Labels</i>
+					</div>
+				</div>
+			</div>			
+		</div>
+	</section>
+
+	<section>
+		<div class="pr-img">
+			<img src="img/img1.jpg">
 		</div>
 	</section>
 	<!-- End -->
