--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				</div>
 				<div class="col-6 t-l-2">
 					<div class="overlay">
-						<i>Group Labels</i>
+						<i>Private Labels</i>
 					</div>
 				</div>
 			</div>			
@@ -129,7 +129,57 @@
 
 	<section>
 		<div class="pr-img">
-			<img src="img/img1.jpg">
+				<div class="shop">
+						<img src="img/img1.jpg" align="center">						
+				</div>
+			<div class="container">
+					<div class="col-">
+					</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<div class="inf-n-p">
+				<p>Latest News</p>
+			</div>
+			<div class="row list-w">
+				<div class="col-6">
+					<div class="n-con-w">
+						<span>Feb 16</span>
+						<p>
+							<i> Chili Weather Weekends</i>
+							Starting january 5th, come spend a winter weekend
+							afternoon with us chilin in the taparoom by the fire with a delicios bowl of chili <a href="#"> Read More</a>
+						</p>
+					</div>
+					<div class="n-con-w">
+						<span>Feb 16</span>
+						<p>
+							<i> Chili Weather Weekends</i>
+							Starting january 5th, come spend a winter weekend
+							afternoon with us chilin in the taparoom by the fire with a delicios bowl of chili <a href="#"> Read More</a>
+						</p>
+					</div>
+				</div>
+				<div class="col-6">
+					<div class="n-con-w">
+						<span>Jan 4</span>
+						<p>
+							<i>We Still have Great Dates for 2019 Available</i>
+							Click here for more information about Winery Weddings!<a href="#"> Read More</a>
+						</p>
+					</div>
+					<div class="n-con-w">
+						<span>Mar 17</span>
+						<p>
+							<i> Chili Weather Weekends</i>
+							Starting january 5th, come spend a winter weekend
+							afternoon with us chilin in the taparoom by the fire with a delicios bowl of chili <a href="#"> Read More</a>
+						</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- End -->
