--- a/index.html
+++ b/index.html
@@ -131,11 +131,17 @@
 		<div class="pr-img">
 				<div class="shop">
 						<img src="img/img1.jpg" align="center">						
-				</div>
 			<div class="container">
-					<div class="col-">
+				<div class="row">
+					<div class="col-6">
+						<span>Our Products</span>
 					</div>
+					<div class="col-6">
+						<i>View Millbrook Winery's Wines</i>
+					</div>
+				</div>
 			</div>
+				</div>
 		</div>
 	</section>
 	<section>
@@ -180,7 +186,64 @@
 					</div>
 				</div>
 			</div>
+			<div class="btn-ln">
+				<a href="" class="btn-ln-1"><span>READ MORE</span></a>
+			</div>
 		</div>
+	</section>
+
+
+	<section>
+		<div class="mail-l">
+			<div class="w-mail">
+				<div class="sub-text">
+				<span>JOIN OUR VIP MAILING LIST</span>
+				</div>
+				<div class="sub-pop">
+					<i>SIGN UP</i>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- FOOTER -->
+	<section>
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-4 w-ft">
+						<span>CONTACT</span>
+						<p>Millbrook Winery<br>
+							26 Wing Road, Millbrook, NY 12545<br>
+							Phone 800.662.9463 | 845.677.8383<br>
+							Fax 845.677.6186<br>
+							millbrookwinery@millwine.com
+						</p>
+					</div>
+					<div class="col-4 w-ft">
+						<span> OPENING HOURS</span>
+						<p>Open Year Round<br>
+							Monday-Sunday 12:00 p.m. to 5:00 p.m. <br>
+							Vineyard Grille<br>
+							Saturdays & Sundays Opens May 28, 2019<br>
+						</p>
+					</div>
+					<div class="col-4 w-ft">
+						<span>CONNECT WITH US</span>
+						<ul>
+							<li>FACEBOOK</li>
+							<li>TWITTER</li>
+							<li>PINTEREST</li>
+							<li>INSTAGRAM</li>
+						</ul>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col- f-e-msg">
+						<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, Design by MSM DesignZ, Inc.</span>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</section>
 	<!-- End -->
 	<!-- jQuery cdn -->
