--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="css/app.css" type="text/css" rel="stylesheet"/>
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
-	<title>Responsive Horizontal Sliding Menu</title>
+	<title>Project Wine</title>
 </head>
 	<body>
 
@@ -31,9 +31,31 @@
 			<nav class="navbar-menu ">
 			  <ul class="menu-listing">
 			    <li><a href="#">HOME</a></li>
-			    <li><a href="#">VISIT +</a></li>
-			    <li><a href="#">SHOP +</a></li>
-			    <li><a href="#">EVENTS +</a></li>
+			    <li><a href="#">VISIT +</a>
+			    	<ul>
+			    		<li>Tours, Tasting, & Visiting the Winery</li>
+			    		<li>Map & Directions</li>
+			    		<li>The Vineyard Taproom & Terrace</li>
+			    		<li>Vineyard Grille</li>
+			    		<li>Group Tours</li>
+			    		<li>20th Annual Art in the Loft</li>
+			    		<li>Vineyard Walking Trail</li>
+			    		<li>Dutchess Wine Trail</li>
+			    		<li>Local Restaurants</li>
+			    	</ul>
+			    </li>
+			    <li><a href="#">SHOP +</a>
+			    	<ul>
+						<li>Wine Portfolio</li>
+						<li>Private Labels</li>
+					</ul>
+			    </li>
+			    <li><a href="#">EVENTS +</a>
+			    	<ul>
+						<li>Wine Portfolio</li>
+						<li>PSR Club Membership</li>
+					</ul>
+			    </li>
 			    <li><a href="#">ABOUT +</a></li>
 			    <li><a href="#">CONTACT</a></li>
 				<li><a href="#"><img src="img/search.png"></a></li>
@@ -47,17 +69,17 @@
 		    <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
 		        <div class="carousel-inner bg-info" role="listbox">
 		            <div class="carousel-item active">
-		                <div class="d-flex align-items-center justify-content-center min-vh-100">
+		                <div class="d-flex align-items-center justify-content-center ">
 		                    <h2 class="display-1"><img src="img/slider/slide1.jpg" ></h1>
 		                </div>
 		            </div>
 		            <div class="carousel-item">
-		                <div class="d-flex align-items-center justify-content-center min-vh-100">
+		                <div class="d-flex align-items-center justify-content-center ">
 		                    <h2 class="display-1"><img src="img/slider/slide2.jpg"></h1>
 		                </div>
 		            </div>
 		            <div class="carousel-item">
-		                <div class="d-flex align-items-center justify-content-center min-vh-100">
+		                <div class="d-flex align-items-center justify-content-center ">
 		                    <h2 class="display-1"><img src="img/slider/slide3.jpg"></h1>
 		                </div>
 		            </div>
@@ -111,19 +133,17 @@
 	</section>
 
 	<section>
-		<div class="container t-l">
-			<div class="row">
-				<div class="col-6 t-l-1">
+		<div class="t-l">
+				<div class="t-l-1">
 					<div class="overlay">
 						<i>Group Tours</i>					
 					</div>
 				</div>
-				<div class="col-6 t-l-2">
+				<div class="t-l-2">
 					<div class="overlay">
 						<i>Private Labels</i>
 					</div>
-				</div>
-			</div>			
+				</div>	
 		</div>
 	</section>
 
@@ -132,12 +152,16 @@
 				<div class="shop">
 						<img src="img/img1.jpg" align="center">						
 			<div class="container">
-				<div class="row">
-					<div class="col-6">
+				<div class="row shop-pr">
+					<div class="col-4">
 						<span>Our Products</span>
 					</div>
-					<div class="col-6">
+					<div class="col-3">
+						
+					</div>
+					<div class="col-5 shop-r">
 						<i>View Millbrook Winery's Wines</i>
+						<a href="#" class="btn-sh-r">SHOP NOW</a>
 					</div>
 				</div>
 			</div>
@@ -156,7 +180,7 @@
 						<p>
 							<i> Chili Weather Weekends</i>
 							Starting january 5th, come spend a winter weekend
-							afternoon with us chilin in the taparoom by the fire with a delicios bowl of chili <a href="#"> Read More</a>
+							afternoon with us chilin in the taparoom by the fire with a delicios bowl of chili <a href="#"> Read More  »</a>
 						</p>
 					</div>
 					<div class="n-con-w">
@@ -164,7 +188,7 @@
 						<p>
 							<i> Chili Weather Weekends</i>
 							Starting january 5th, come spend a winter weekend
-							afternoon with us chilin in the taparoom by the fire with a delicios bowl of chili <a href="#"> Read More</a>
+							afternoon with us chilin in the taparoom by the fire with a delicios bowl of chili <a href="#"> Read More »</a>
 						</p>
 					</div>
 				</div>
@@ -173,7 +197,7 @@
 						<span>Jan 4</span>
 						<p>
 							<i>We Still have Great Dates for 2019 Available</i>
-							Click here for more information about Winery Weddings!<a href="#"> Read More</a>
+							Click here for more information about Winery Weddings!<a href="#"> Read More »</a>
 						</p>
 					</div>
 					<div class="n-con-w">
@@ -181,7 +205,7 @@
 						<p>
 							<i> Chili Weather Weekends</i>
 							Starting january 5th, come spend a winter weekend
-							afternoon with us chilin in the taparoom by the fire with a delicios bowl of chili <a href="#"> Read More</a>
+							afternoon with us chilin in the taparoom by the fire with a delicios bowl of chili <a href="#"> Read More »</a>
 						</p>
 					</div>
 				</div>
